# ptt_llm

./: .dockerignore  .gitignore  Dockerfile  README.md  debug_models.py  docker-compose.yml  env_settings.py  pyproject.toml  scraper.py
article/: models.py  rag_query.py  scraper.py  serializers.py  urls.py  views.py
article/migrations/: 0001_initial.py  0002_comment.py  0003_rename_ip_datename_comment_ip_datetime.py
celery_app/: data_processing.py  scraper.py  tasks.py
config/: celery.py  settings.py  urls.py
log_app/migrations/: 0001_initial.py
